--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,2 +1,3 @@
-$title_font: 'AA Bebas Neue';
-$content_font: Lato, sans-serif;
+$font-title: 'Bebas Neue', Impact;
+$font-content: Lato, 'sans-serif';
+$font-content-alt: Roboto, 'sans-serif';
