--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,11 +4,8 @@ $color-body: #1e2221;
 $color-error: red;
 
 $color-line: #eceae8;
+$color-black-transparent: rgba(27, 31, 35, .15);
 
 // fonts color
 $color-font-main: #5a5a5a;
 $color-font-dim: #ccc;
-
-
-
-
