--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,3 +9,6 @@ $color-black-transparent: rgba(27, 31, 35, .15);
 // fonts color
 $color-font-main: #5a5a5a;
 $color-font-dim: #ccc;
+
+$color-gray-300: #cccccc;
+$color-gray-500: #bebebe;
