font license comment

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,4 @@
-$font-title: 'Bebas Neue', Impact;
+// free to use fonts only
+$font-title: 'Bebas Neue', Impact; // https://dharmatype.com/bebas-neue, https://github.com/dharmatype/Bebas-Neue
 $font-content: Lato, 'sans-serif';
 $font-content-alt: Roboto, 'sans-serif';
