--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,14 @@ $color-black-transparent: rgba(27, 31, 35, .15);
 // fonts color
 $color-font-main: #5a5a5a;
 $color-font-dim: #ccc;
+$color-font-placeholder: #e5e5e5;
 
-$color-gray-300: #cccccc;
-$color-gray-500: #bebebe;
+$color-line: #e5e5e5;
+
+$color-gray-50: #d1d1d1;
+$color-gray-100: #cccccc;
+$color-gray-200: #bfbfbf;
+$color-gray-300: #adadad;
+$color-gray-400: #989898;
+$color-gray-450: #808080;
+$color-gray-500: #7a7a7a;
